--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "yoredis",
-  "version": "1.0.0",
-  "description": "A minimalistic Redis client using modern Node.js.",
-  "main": "index.js",
+  "name": "@albert-team/red",
+  "description": "Minimal Redis client for Node.js",
+  "license": "MIT",
+  "author": "Albert Team",
+  "repository": "github:albert-team/red",
+  "version": "0.1.0-canary.0",
+  "main": "src/index.js",
+  "files": [
+    "src"
+  ],
+  "scripts": {},
   "dependencies": {
     "redis-parser": "^3.0.0"
   },
   "devDependencies": {
-    "tape": "^4.5.1",
-    "tape-promise": "^2.0.1"
+    "eslint": "^5.14.1"
   },
-  "scripts": {
-    "test": "node test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/djanowski/yoredis.git"
-  },
-  "author": "Damian Janowski <jano@dimaion.com>",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/djanowski/yoredis/issues"
+    "url": "https://github.com/albert-team/red/issues"
   },
-  "homepage": "https://github.com/djanowski/yoredis#readme"
+  "homepage": "https://github.com/albert-team/red#readme"
 }
