--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {},
   "dependencies": {
+    "node-wait-until": "^1.0.0",
     "redis-parser": "^3.0.0"
   },
   "devDependencies": {
