--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,6 @@
   "rules": {
     "eqeqeq": ["error", "smart"],
     "no-console": "off",
-    "no-unused-vars": "error"
+    "no-unused-vars": "warn"
   }
 }
