--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   ],
   "scripts": {},
   "dependencies": {
-    "better-docs": "^1.1.6",
     "node-wait-until": "^1.0.0",
-    "redis-parser": "^3.0.0",
-    "jsdoc": "^3.5.5"
+    "redis-parser": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.15.2"
+    "eslint": "^5.15.2",
+    "better-docs": "^1.1.6",
+    "jsdoc": "^3.5.5"
   },
   "bugs": {
     "url": "https://github.com/albert-team/red/issues"
