--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "redis-parser": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.15.2",
-    "better-docs": "^1.1.6",
-    "jsdoc": "^3.5.5"
+    "eslint": "^5.15.2"
   },
   "bugs": {
     "url": "https://github.com/albert-team/red/issues"
