--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "es6": true,
     "node": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "ecmaFeatures": {
@@ -11,8 +11,6 @@
     }
   },
   "rules": {
-    "eqeqeq": ["error", "smart"],
-    "no-console": "off",
     "no-unused-vars": "warn"
   }
 }
