--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "license": "MIT",
   "author": "Albert Team",
   "repository": "github:albert-team/red",
+  "homepage": "https://github.com/albert-team/red#readme",
+  "bugs": {
+    "url": "https://github.com/albert-team/red/issues"
+  },
   "version": "0.7.1",
   "main": "src/index.js",
   "files": [
     "src"
   ],
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "scripts": {},
   "dependencies": {
-    "node-wait-until": "^1.0.0",
     "redis-parser": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0"
   },
-  "bugs": {
-    "url": "https://github.com/albert-team/red/issues"
-  },
-  "homepage": "https://github.com/albert-team/red#readme",
   "keywords": [
     "minimal",
     "minimalistic",
